2006-04-30  Christian Stimming  <stimming@tuhh.de>

	* src/app-utils/gnc-ui-util.c: Fix retrieval of reconcile
	abbreviation if the translators erroneously did not use the same
	string length as the english string. Bug #339722.

2006-04-29  David Hampton  <hampton@employees.org>

	* src/engine/gnc-lot.c:
	* src/engine/cap-gains.[ch]: Patch from Mike Alexander's to handle
	multiple lot dispositions on the same day.  Needed since the
	transaction sorting code may sort gains splits after other splits
	on the same day. Add a new function to find the source split
	associated with a capital gains split.  Also use lot_amount and
	lot_value consistently instead of opening_amount and
	opening_value.

	* src/business/business-gnome/dialog-billterms.c:
	* src/business/business-gnome/glade/billterms.glade: Eliminate
	some gtk warning messages. Stop the contents of the Bill Terms
	dialog from shifting around when the first/last term is
	created/destroyed.

2006-04-30  Andreas Köhler  <andi5.py@gmx.net>

	* configure.in:
	* src/register/register-gnome/gnucash-item-edit.[ch]: Remove all
	  XIM code, as it has been commented out unconditionally already
	  for a while. Send focus in/out events to register GtkEntry.
	  Address #337020.

2006-04-29  Joshua Sled  <jsled@asynchronous.org>

	Bug#157179: make multi-commodity SX handling a bit better.

	* src/gnome/dialog-sxsincelast.c (sxsl_get_sx_vars): refactor to
	process SX splits in the same order as the transaction creation
	routine.  Return needed commodity exchange rates as variables.
	(create_each_transaction_helper): Use the user-provided exchange
	rates to create the splits, not the pricedb.

	* src/gnome/dialog-scheduledxaction.c (gnc_sxed_check_consistent):
	Ensure that auto-create SX template txns aren't in multiple commodities.

	* src/app-utils/gnc-exp-parser.c (gnc_ep_tmpvarhash_check_vals):
	remove printf.

2006-04-29  Christian Stimming  <stimming@tuhh.de>

	* po/glossary/gnc-glossary.txt: Clarify definitions of and